# curlx-browse

./: README.md  README_todo.md  pyproject.toml
curl_requests/: compile_ffi.py  curl.py  curl_wrapper.py  exceptions.py  response.py  session.py
curl_requests/ffi/: cdef.c  easy_set.c  easy_set.h
curl_requests/lib64/: brotlicommon.lib  brotlidec.lib  nghttp2.lib  ngtcp2_crypto_boringssl.lib  zlib.lib  zstd.lib
curl_requests/lib64/include/openssl/: ssl.h
curlx_browse/: compile_ffi.py  curl_wrapper.py  exceptions.py  requirements.txt  session.py
curlx_browse/ffi/: easy_set.c  easy_set.h
curlx_browse/lib64/: brotlienc.lib  libcurl.lib  libcurl_imp.lib  nghttp3.lib  ngtcp2.lib  ssl.lib
curlx_browse/lib64/share/man/man1/: curl.1
curlx_browse/wrapper/: _wrapper.c  _wrapper.cp312-win_amd64.pyd
tests/unittest/: basic_test.py
